# sp1-playground

./: Cargo.toml
.github/workflows/: main.yml  pr.yml  release.yml  suite.yml
crates/cli/docker/: Dockerfile
crates/core/executor/: Cargo.toml
crates/core/executor/src/: executor.rs  opcode.rs  record.rs
crates/core/machine/src/: lib.rs
crates/cuda/src/: lib.rs
crates/primitives/src/: lib.rs  poseidon2.rs
crates/prover/src/: lib.rs
crates/recursion/circuit/src/: stark.rs
crates/sdk/src/: lib.rs
crates/stark/src/: chip.rs  verifier.rs
crates/stark/src/air/: builder.rs
crates/stark/src/lookup/: builder.rs  interaction.rs
crates/zkvm/lib/: Cargo.toml
crates/zkvm/lib/src/: lib.rs  poseidon2.rs  poseidon_hash.rs
examples/: Cargo.toml  myfile
examples/elf/: riscv32im-succinct-zkvm-elf
examples/poseidon2-merkle-tree/program/: Cargo.toml
examples/poseidon2-merkle-tree/program/src/: main.rs
examples/poseidon2-merkle-tree/script/: Cargo.toml
examples/poseidon2-merkle-tree/script/src/: main.rs
examples/poseidon2/program/: Cargo.toml
examples/poseidon2/program/src/: main.rs
examples/poseidon2/script/: Cargo.toml  backtrace1  backtrace2  runlog1  runlog2
examples/poseidon2/script/src/: main.rs
examples/sha256/program/: Cargo.toml
examples/sha256/script/: Cargo.toml
tests/: Cargo.toml
tests/poseidon2/: Cargo.toml
tests/poseidon2-permute/: Cargo.toml
tests/poseidon2-permute/elf/: riscv32im-succinct-zkvm-elf
tests/poseidon2-permute/src/: main.rs
tests/poseidon2/elf/: riscv32im-succinct-zkvm-elf
tests/poseidon2/src/: main.rs
(+45 files in other folders)
