[package]
name = "poseidon2-test"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
sp1-zkvm = { path = "../../crates/zkvm/entrypoint" }
sp1-lib = { path = "../../crates/zkvm/lib" }
sp1-primitives = { path = "../../crates/primitives", version = "3.0.0" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v4" }
p3-field = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v4" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3", branch = "sp1-v4" }